# SkullNetworkTelemetry

./: .gitignore  CMakeLists.txt  LICENSE  README.md  project_tree.txt
.github/workflows/: build.yml  codeql.yml  cppcheck.yml  dependency-review.yml  pre_release_windows.yml
scs_sdk/include/: scssdk.h  scssdk_types.h  scssdk_value.h
scs_telemetry/include/: scssdk.h  scssdk_plugin.h  scssdk_telemetry.h  scssdk_types.h  scssdk_value.h
src/: dllmain.cpp  logger.cpp  logger.h  memory_scanner.cpp  memory_scanner.h  network_client.cpp  network_client.h  plugin.cpp  plugin.h  telemetry_callbacks.cpp  telemetry_manager.cpp  telemetry_manager.h  telemetry_payload.h
src/offsets/: offsets.cpp  offsets.h  offsets_resolver.cpp  offsets_resolver.h  pattern_finder.cpp  pattern_finder.h  signatures.h  signatures.json  truck_reader.cpp  truck_reader.h
src/signatures/: signatures.h  signatures.json  signatures_job.h  signatures_truck.h
